<resources>
    <string name="app_name">Feira Barata</string>
    <string name="search_hint">Procure por um produto&#8230;</string>
    <string name="e_mail">E-mail&#8230;</string>
    <string name="password">Senha&#8230;</string>
    <string name="btn_login">Login</string>
    <string name="menu_login">Fazer login</string>
    <string name="menu_cadastro">Fazer cadastro</string>
    <string name="nome_cadastro">Nome&#8230;</string>
    <string name="conf_senha_cadastro">Confirmar senha&#8230;</string>
    <string name="cpf_cadastro">CPF&#8230;</string>
    <string name="telefone_cadastro">Telefone&#8230;</string>
    <string name="nascimento_cadastro">Data de nascimento&#8230;</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="product_name_hint">Nome do produto&#8230;</string>
    <string name="product_price_hint">Preço do produto&#8230;</string>
    <string name="product_brand_hint">Marca do produto&#8230;</string>
    <string name="product_quantity_hint">Peso ou volume&#8230;</string>
    <string name="user_welcome_message">Bem-vindo(a), </string>
    <string name="upload_product_img_btn">Carregar imagem</string>
    <string name="content_description_product_image">Imagem do produto</string>
</resources>
