<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/nome_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/product_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/marca_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/product_brand_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_supermarket_spinner" />

    <EditText
        android:id="@+id/peso_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:hint="@string/product_quantity_hint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_category_spinner" />

    <EditText
        android:id="@+id/price_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/product_price_hint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peso_product" />

    <ImageView
        android:id="@+id/upload_img_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_product"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/bt_cadastrar_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="113dp"
        android:text="@string/btn_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_product" />

    <Spinner
        android:id="@+id/product_supermarket_spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="33dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome_produto" />

    <Spinner
        android:id="@+id/product_category_spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/marca_produto" />
</androidx.constraintlayout.widget.ConstraintLayout>